--- a/tourism.html
+++ b/tourism.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-<link rel="icon" href="Tourismlogo.jpg">
+<link rel="icon" href="https://i.ibb.co/LhndJs6/Tourismlogo.jpg">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vacay-Explore the World</title>
